# proto_swagger_gen

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  consolidate_swagger.bzl  defs.bzl  docker-bazel-build.sh  package.json  proto_swagger_gen.bzl  proto_swagger_gen.sh  swagger_gen.bzl  update_example.js  update_example.sh
api/: BUILD.bazel  api.proto  api_service.proto  cart_service.proto  products_service.proto
artifacts/api/: api.swagger.json  cart_service.swagger.json
artifacts/api/cart_service_angular/: api.module.ts
artifacts/api/cart_service_angular/model/: apiCart.ts  apiGetCartResponse.ts
artifacts/api/cart_service_server/api/: api.ts  cartService.plugin.ts
artifacts/api/cart_service_server/model/: apiCart.ts
artifacts/api/products_service_angular/api/: productsService.service.ts
artifacts/api/products_service_angular/model/: apiProduct.ts
artifacts/api/products_service_server/api/: productsService.plugin.ts
artifacts/api/products_service_server/model/: apiProduct.ts  apiSkuPrice.ts
cart_service/: BUILD.bazel  cart_service.proto
docker-build-artifacts/api/: products_service.swagger.json
docker-build-artifacts/api/cart_service_angular/model/: apiGetCartRequest.ts
docker-build-artifacts/api/cart_service_server/model/: models.ts
docker-build-artifacts/api/products_service_angular/: api.module.ts
docker-build-artifacts/api/products_service_angular/model/: apiGetProductsRequest.ts  models.ts
docker-build-artifacts/api/products_service_server/model/: apiColorOption.ts  apiGetProductsRequest.ts  apiImage.ts  apiSKU.ts
docker-build-artifacts/cart_service_server/model/: apiGetCartRequest.ts  apiGetCartResponse.ts
docker-build-artifacts/products_service_angular/model/: apiImage.ts  apiSKU.ts  apiSkuPrice.ts
example/api/: BUILD.bazel  products_service.proto
example/proto_swagger_gen_out/: cart_service.swagger.json  products_service.swagger.json
example/proto_swagger_gen_out/cart_service_angular/api/: cartService.service.ts
example/proto_swagger_gen_out/cart_service_angular/model/: apiCart.ts  apiGetCartRequest.ts  apiGetCartResponse.ts
example/proto_swagger_gen_out/products_service_angular/api/: api.ts  productsService.service.ts
example/proto_swagger_gen_out/products_service_angular/model/: apiColorOption.ts  apiGetProductsRequest.ts  apiGetProductsResponse.ts  apiImage.ts  apiProduct.ts  apiSKU.ts  apiSkuPrice.ts
example/proto_swagger_gen_out/products_service_server/api/: api.ts
example/proto_swagger_gen_out/products_service_server/model/: apiGetProductsResponse.ts
products_service/: BUILD.bazel  products_service.proto
proto_swagger_gen_out/cart_service_angular/api/: api.ts  cartService.service.ts
proto_swagger_gen_out/cart_service_server/api/: cartService.plugin.ts
proto_swagger_gen_out/products_service_angular/model/: apiColorOption.ts  apiGetProductsResponse.ts
proto_swagger_gen_out/products_service_server/api/: productsService.plugin.ts
tools/: BUILD.bazel  consolidate-swagger.js
typescript-hapi-server/: BUILD.bazel  README.md  pom.xml
typescript-hapi-server/src/main/java/: TypescriptHapiServerGenerator.java
typescript-hapi-server/src/main/java/com/nrwl/codegen/: TypescriptHapiServerGenerator.java
typescript-hapi-server/src/main/resources/typescript-hapi-server/: api.plugin.mustache  model.mustache
