load("@proto_swagger_gen//:defs.bzl", "proto_swagger_gen")

package(default_visibility = ["//visibility:public"])

proto_swagger_gen(
    name = "cart_service",
    proto = "cart_service.proto",
)

proto_swagger_gen(
    name = "products_service",
    proto = "products_service.proto",
)

proto_swagger_gen(
    name = "api",
    proto = "api.proto",
    deps = [
        ":cart_service_proto_library",
        ":products_service_proto_library",
    ],
)
