load("@proto_swagger_gen//:proto_swagger_gen.bzl", "proto_swagger_gen")

package(default_visibility = ["//visibility:public"])

proto_swagger_gen(
    name = "cart_service",
    proto = "cart_service.proto",
)

proto_swagger_gen(
    name = "products_service",
    proto = "products_service.proto",
)
