load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@grpc_ecosystem_grpc_gateway//protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")
load("@io_bazel_rules_openapi//openapi:openapi.bzl", "openapi_gen")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "cart_service_proto",
    srcs = ["cart_service.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

protoc_gen_swagger(
    name = "protoc_gen_swagger",
    proto = ":cart_service_proto",
)

openapi_gen(
    name = "openapi_gen_angular",
    language = "typescript-angular",
    spec = ":protoc_gen_swagger",
)
