package(default_visibility = ["//visibility:public"])

java_import(
    name = "swagger_codegen_cli",
    jars = [
        "swagger-codegen-cli.jar",
    ],
)

java_import(
    name = "typescript_hapi_server_swagger_codegen",
    jars = [
        "typescript-hapi-server-swagger-codegen.jar",
    ],
)
